--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="msg-container hide">
@@ -28,6 +28,6 @@
       </div>
       <button id="reset-btn">Reset</button>
     </main>
-    <script src="./js/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
